--- a/WebDesignGoPro/css/style.css
+++ b/WebDesignGoPro/css/style.css
@@ -1049,6 +1049,8 @@ btnback
     background-color: silver;
     position: fixed;
     cursor: pointer;
+    font-family: 'Times New Roman';
+    font-size: 14px;
     box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
     border-radius: 0 50px 50px 0;
     top: 0;
