--- a/WebDesignGoPro/css/style.css
+++ b/WebDesignGoPro/css/style.css
@@ -868,7 +868,11 @@ media queries
 		font-size: 2.8vw;
 	}
 }
-
+@media (min-width: 769px) {
+  .header__nav {
+    display: block !important;
+  }
+}
 @media (max-width: 768px) {
 	* {
 		-webkit-animation: none !important;
