--- a/LandingZap/css/styles.css
+++ b/LandingZap/css/styles.css
@@ -347,13 +347,6 @@ section {
   transition: .3s;
 }
 
-.testimonial:nth-child(3),
-.testimonial:nth-child(4),
-.testimonial:nth-child(5),
-.testimonial:nth-child(6) {
-  display: none;
-}
-
 .testimonial__paragraph {
   opacity: 0.77;
   line-height: 30px;
@@ -379,6 +372,10 @@ section {
   position: absolute;
   bottom: 45px;
   right: 48px;
+}
+
+.slick-slide {
+  margin: 0 10px;
 }
 
 /* areYouReady */
@@ -429,6 +426,13 @@ section {
     width: 38%;
     margin: 0 1%;
     padding: 15px;
+  }
+  .slick-slide {
+    margin: 0 10px;
+  }
+  .slick-list {
+    width: 80%;
+    margin: 0 auto;
   }
 }
 
@@ -488,9 +492,6 @@ section {
     width: 70%;
     margin: 0 auto;
   }
-  .testimonial:nth-child(2) {
-    display: none;
-  }
 }
 
 @media (max-width: 480px) {
@@ -543,10 +544,10 @@ section {
   }
 }
 
-
 /* ==============================  
 btnback
 ============================== */
+
 .btnback {
   z-index: 999;
   background-color: silver;
@@ -554,11 +555,12 @@ btnback
   cursor: pointer;
   font-family: 'Times New Roman';
   font-size: 14px;
-  box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   border-radius: 0 50px 50px 0;
   top: 0;
   left: 0;
 }
+
 .btnback a {
   z-index: 999;
   display: block;
@@ -567,13 +569,16 @@ btnback
   font-weight: 700;
   color: #333;
 }
+
 .btnback:hover {
-  background:  #999999;
-  box-shadow: 5px 5px 10px rgba(255,255,255,0.5);
+  background: #999999;
+  box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.5);
   transition: .3s ease;
 }
+
 .btnback a:hover {
   color: white;
   transition: .3s ease;
 }
+
 /* ----- end btnback ----- */
