--- a/LandingZap/css/styles.css
+++ b/LandingZap/css/styles.css
@@ -377,7 +377,9 @@ section {
 .slick-slide {
   margin: 0 10px;
 }
-
+.slick-slide:focus { 
+  outline: none; 
+}
 /* areYouReady */
 
 .areYouReady {
@@ -582,3 +584,89 @@ btnback
 }
 
 /* ----- end btnback ----- */
+
+/* стили модального окна и формы связи */
+
+.modal {
+  border-radius: 5px;
+  border: 3px #000 solid;
+  background: #fff;
+  position: fixed; 
+  top: 45%;
+  left: 50%; 
+  margin-top: -150px;
+  margin-left: -150px; 
+  display: none;
+  opacity: 0; 
+  z-index: 5; 
+  padding: 20px 10px;
+  text-align: center;
+}
+
+.modal__close {
+  color: tomato;
+  font-size: 16px;
+  font-weight: 700;
+  width: 21px;
+  height: 21px;
+  position: absolute;
+  top: 10px;
+  right: 0;
+  cursor: pointer;
+  display: block;
+}
+
+#overlay {
+  z-index:3;
+  position:fixed;
+  background-color:#000;
+  opacity:0.8;
+  -moz-opacity:0.8; 
+  filter:alpha(opacity=80);
+  width:100%; 
+  height:100%;
+  top:0;
+  left:0;
+  cursor:pointer;
+  display:none;
+}
+
+.modal__heading {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.modal__label {
+  display: block;
+  font-size: 16px;
+  text-align: left;
+  padding-left: 5%;
+}
+
+.modal__input {
+  line-height: 30px;
+  width: 90%;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  font-size: 16px;
+
+}
+.modal__input:focus {
+  outline: none;
+}
+.modal__button {
+  line-height: 30px;
+  padding: 0 30px;
+  border-radius: 10px;
+  display: block;
+  margin-left: 5%;
+}
+.modal__button:hover {
+  background-color: silver;
+}
+.modal__button:focus {
+  outline: none;
+}
